--- a/main.css
+++ b/main.css
@@ -17,16 +17,32 @@ html {
 	padding: 6px 10px;
 	margin-bottom: 20px;
 	position: relative;
-	overflow: visible;
 	width: 10px;
-	transition:All 1s ease;-webkit-transition:All 0.3s ease;-moz-transition:All 0.3s ease;-o-transition:All 0.3s ease;
+	transition:All 0.3s ease;-webkit-transition:All 0.3s ease;-moz-transition:All 0.3s ease;-o-transition:All 0.3s ease;
+
 }
 .ht_info:hover{
 	width: auto;
 	color: rgba(255,255,255,1);
 	z-index: 99;
+	background-image: none;
 }
 .ht_info:before{
+	display: block;
+	content: ' ';
+	width:100%;
+	height: 100%;
+	background: #3AAB47 url(info_icon.png) no-repeat center 6px;
+	opacity: 1;
+	position: absolute;
+	left:0;
+	top:0;
+}
+.ht_info:hover:before{
+	opacity: 0;
+
+}
+.ht_info:after{
 	content: ' ';
 	display: block;
 	width: 22px;
@@ -36,4 +52,5 @@ html {
 	position: absolute;
 	bottom: -11px;
 	left: 4px;
+	z-index: -1;
 }
