--- a/main.css
+++ b/main.css
@@ -5,10 +5,14 @@ html {
 }
 .thumb_text{
 	position: absolute;
-	top:-30px;
-	font-size: 10px;
+	font-size: 14px;
+	z-index:3;
+	color: white;
+	text-align: center;
+	text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
+	font-family: 'Roboto', Arial !important; font-weight: 400;
 }
-.ht_info{
+.ht_info, .ht_zoom{
 	display: block;
 	background: #3AAB47;
 	color: rgba(255,255,255,0);
@@ -21,13 +25,13 @@ html {
 	transition:All 0.3s ease;-webkit-transition:All 0.3s ease;-moz-transition:All 0.3s ease;-o-transition:All 0.3s ease;
 
 }
-.ht_info:hover{
+.ht_info:hover, .ht_zoom:hover{
 	width: auto;
 	color: rgba(255,255,255,1);
 	z-index: 99;
 	background-image: none;
 }
-.ht_info:before{
+.ht_info:before, .ht_zoom:before{
 	display: block;
 	content: ' ';
 	width:100%;
@@ -38,11 +42,11 @@ html {
 	left:0;
 	top:0;
 }
-.ht_info:hover:before{
+.ht_info:hover:before, .ht_zoom:hover:before{
 	opacity: 0;
 
 }
-.ht_info:after{
+.ht_info:after, .ht_zoom:after{
 	content: ' ';
 	display: block;
 	width: 22px;
@@ -54,3 +58,6 @@ html {
 	left: 4px;
 	z-index: -1;
 }
+.ht_zoom{background: #4A90E2;}
+.ht_zoom:before{background: #4A90E2 url(zoom_icon.png) no-repeat center 6px;}
+.ht_zoom:after{background: #4A90E2;}
