--- a/main.css
+++ b/main.css
@@ -57,6 +57,26 @@ html {
 	left: 4px;
 	z-index: -1;
 }
-.ht_zoom{background: #4A90E2;}
+.ht_zoom:hover{
+	content: ' ';
+	display: block;
+	background: #4A90E2;
+	transform: scaleX(0.5) rotate(45deg) ;
+	position: absolute;
+	width: 300px;
+	height: 100px;
+	top: 4px;
+	left: -11px;
+	z-index: -1;
+}
+
+.ht_zoom{background: #4A90E2;text-align: left;overflow:visible;}
 .ht_zoom:before{background: #4A90E2 url(zoom_icon.png) no-repeat center 6px;}
 .ht_zoom:after{background: #4A90E2;}
+.ht_zoom span{
+	display: none; 
+}
+.ht_zoom:hover span{
+	display: block;
+	width: 300px;
+}
