--- a/main.css
+++ b/main.css
@@ -7,9 +7,12 @@ html {
 	position: absolute;
 	font-size: 14px;
 	color: white;
-	text-align: center;
-	text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
+	text-align: left;
+	text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
 	font-family: 'Roboto', Arial !important; font-weight: 400;
+	background: rgba(0,0,0,0.3);
+	display:inline-block;
+	padding: 0 4px;
 }
 .ht_info, .ht_zoom{
 	display: block;
