--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ html {
 	display:inline-block;
 	padding: 0 4px;
 }
-.ht_info, .ht_zoom{
+.ht_info, .ht_zoom, .ht_img{
 	display: block;
 	background: #3AAB47;
 	color: rgba(255,255,255,0);
@@ -27,13 +27,13 @@ html {
 	transition:All 0.3s ease;-webkit-transition:All 0.3s ease;-moz-transition:All 0.3s ease;-o-transition:All 0.3s ease;
 
 }
-.ht_info:hover, .ht_zoom:hover{
+.ht_info:hover, .ht_zoom:hover, .ht_img:hover{
 	width: auto;
 	color: rgba(255,255,255,1);
 	z-index: 99;
 	background-image: none;
 }
-.ht_info:before, .ht_zoom:before{
+.ht_info:before, .ht_zoom:before, .ht_img:before{
 	display: block;
 	content: ' ';
 	width:100%;
@@ -44,11 +44,11 @@ html {
 	left:0;
 	top:0;
 }
-.ht_info:hover:before, .ht_zoom:hover:before{
+.ht_info:hover:before, .ht_zoom:hover:before, .ht_img:hover:before{
 	opacity: 0;
 
 }
-.ht_info:after, .ht_zoom:after{
+.ht_info:after, .ht_zoom:after, .ht_img:after{
 	content: ' ';
 	display: block;
 	width: 22px;
@@ -71,4 +71,34 @@ html {
 .ht_zoom:hover div{
 	display: block;
 	width: 300px;
+}
+
+.ht_img{background: #F5A623;text-align: left;overflow:visible;}
+.ht_img:before{background: #F5A623 url(photo_icon.png) no-repeat center 6px;}
+.ht_img:after{background: #F5A623;}
+
+.img_view{
+	margin: 20px;
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+	background-size: contain;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
+	background-position: center center;
+	text-align: left;
+	position: relative;
+	z-index: 999;
+}
+
+.img_view span{
+	position: absolute;
+	top: 40px;
+	left: 40px;
+	display: inline-block;
+	background: none repeat scroll 0% 0% #DC493C;
+    color: #FFF;
+    font-family: 'Roboto', Arial !important; font-weight: 400;
+    font-size: 18px;
+    box-shadow: 8px 0px 0px #DC493C, -8px 0px 0px #DC493C;
+	
 }
