--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ html {
 	width: 10px;
 	position:relative; left: -50%;
 	font-size: 14px;
-	transition:All 0.3s ease;-webkit-transition:All 0.3s ease;-moz-transition:All 0.3s ease;-o-transition:All 0.3s ease;
+/* 	transition:All 0.3s ease;-webkit-transition:All 0.3s ease;-moz-transition:All 0.3s ease;-o-transition:All 0.3s ease; */
 }
 
 .ht_info:hover, .ht_img:hover{
