--- a/main.css
+++ b/main.css
@@ -97,3 +97,25 @@
     -webkit-backdrop-filter: blur(10px);
     border-radius:76px;
 }
+
+#inf-wnd{
+
+backdrop-filter: blur(15px); 
+-webkit-backdrop-filter: blur(15px);
+border: 1px solid rgba(255,255,255, 0.3);
+border-radius:20px;
+padding:40px;
+font-family:"Navigo", Navigo;
+font-size: 16px;
+line-height:20px;
+background: rgba(255,255,255, 0.4);
+padding: 36px;
+}
+
+#inf-wnd h2{
+    color:#2b5e4a;
+    font-weight:500;
+    font-size: 28px;
+    line-height: 36px;
+    font-family:"Navigo", Navigo;
+}
