--- a/main.css
+++ b/main.css
@@ -100,16 +100,34 @@
 
 #inf-wnd{
 
-backdrop-filter: blur(15px); 
--webkit-backdrop-filter: blur(15px);
-border: 1px solid rgba(255,255,255, 0.3);
-border-radius:20px;
-padding:40px;
-font-family:"Navigo", Navigo;
-font-size: 16px;
-line-height:20px;
-background: rgba(255,255,255, 0.4);
-padding: 36px;
+    backdrop-filter: blur(15px); 
+    -webkit-backdrop-filter: blur(15px);
+    border: 1px solid rgba(255,255,255, 0.3);
+    border-radius:20px;
+    padding:40px;
+    font-family:"Navigo", Navigo;
+    font-size: 16px;
+    line-height:20px;
+    background: rgba(255,255,255, 0.4);
+    padding: 36px;
+    position: relative;
+}
+
+#inf-wnd:after{
+content: ' ';
+cursor: pointer;
+display: block;
+width: 38px;
+height: 38px;
+background:transparent url("images/up-button.svg") no-repeat center center;
+position: absolute;
+top: 20px;
+right: 20px;
+z-index: 2;
+}
+#inf-wnd:hover:after{
+    background: transparent url("images/up-button-hover.svg") no-repeat center center;
+
 }
 
 #inf-wnd h2{
@@ -121,5 +139,5 @@ padding: 36px;
 }
 
 .menu-alt{
-    
+
 }
