--- a/main.css
+++ b/main.css
@@ -136,6 +136,11 @@
     position: relative;
 }
 
+#help-main{
+    
+    padding:0 20px 20px 20px;
+}
+
 #inf-wnd:after{
 content: ' ';
 cursor: pointer;
