--- a/styles.css
+++ b/styles.css
@@ -174,8 +174,14 @@ z-index: 2;
 }
 
 .inf-wnd h4{
-    padding: 5px 0;
+    padding: 10px 0 10px 0;
     margin:0;
+    font-weight: 500;
+    
+
+}
+.inf-wnd p{
+    line-height: 1.2em;
 }
 
 .subtitle{
